-Lots of small fixes to unneeded initiations and creations.